# usbip-macos

./: Cargo.toml  README.md  entitlements.plist  flake.nix  rust-toolchain.toml  test.sh
.cargo/: config.toml
.github/workflows/: push.yml
src/: controller_interface.rs  device.rs  endpoint.rs  main.rs  usbip.rs
