[package]
name = "usbip-macos"
version = "0.0.1"
edition = "2021"

[dependencies]
objc2 = { git = "https://github.com/madsmtm/objc2.git", branch = "master", features = ["relax-sign-encoding"] } # https://github.com/madsmtm/objc2/issues/754
block2 = { git = "https://github.com/madsmtm/objc2.git", branch = "master" }
dispatch2 = { git = "https://github.com/madsmtm/objc2.git", branch = "master" }
objc2-foundation = { git = "https://github.com/madsmtm/objc2.git", branch = "master" }
objc2-io-usb-host = { git = "https://github.com/madsmtm/objc2.git", branch = "master" }
bytes = "1.10.1"
tokio = { version = "1", features = ["full"] }
bitflags = "2.9.1"
clap = "4.5.40"
clap-num = "1.2.0"
